--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>ECell sponsorship</title>
-    <link rel="stylesheet" href="D:\Web dev\Ecell_sponsorship\styles\style1.css">
+    <link rel="stylesheet" href="\styles\style1.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
@@ -12,26 +12,21 @@
         Home</a>
     <br>
     <br>
-    <a href="https://ecell.iith.ac.in/esummit/team.html"><img style="width: 60px"
-            src="D:\Web dev\Ecell_sponsorship\Images\esummitlogo.png" alt="logo"></a>
+    <a href="https://ecell.iith.ac.in/esummit/team.html"><img style="width: 60px" src="\Images\esummitlogo.png"
+            alt="logo"></a>
     <h1>SPONSORS</h1>
     <table align="center">
         <tr>
-            <td><a href="https://eduxlabs.com/"><img style="width: 200px"
-                        src="D:\Web dev\Ecell_sponsorship\Images\Eduxlabs.png"></td></a>
-            <td><a href="https://www.henryharvin.com/"><img style="width: 200px"
-                        src="D:\Web dev\Ecell_sponsorship\Images\Henry harvin.png"></td></a>
-            <td><a href="https://mfleduclub.wpcomstaging.com/"><img style="width:200px"
-                        src="D:\Web dev\Ecell_sponsorship\Images\mfl.png"></td></a>
+            <td><a href="https://eduxlabs.com/"><img style="width: 200px" src="\Images\Eduxlabs.png"></td></a>
+            <td><a href="https://www.henryharvin.com/"><img style="width: 200px" src="\Images\Henry harvin.png"></td>
+            </a>
+            <td><a href="https://mfleduclub.wpcomstaging.com/"><img style="width:200px" src="\Images\mfl.png"></td></a>
         </tr>
         <tr>
-            <td><a href="https://techobytes.com/"><img style="width: 200px"
-                        src="D:\Web dev\Ecell_sponsorship\Images\techobytes.png"></td></a>
-            <td><a href="https://verzeo.com/"><img style="width: 200px"
-                        src="D:\Web dev\Ecell_sponsorship\Images\verzeo.jpg">
+            <td><a href="https://techobytes.com/"><img style="width: 200px" src="\Images\techobytes.png"></td></a>
+            <td><a href="https://verzeo.com/"><img style="width: 200px" src="\Images\verzeo.jpg">
             </td></a>
-            <td><a href="https://www.yhills.com/"><img style="width: 200px"
-                        src="D:\Web dev\Ecell_sponsorship\Images\Yhills.png"></td></a>
+            <td><a href="https://www.yhills.com/"><img style="width: 200px" src="\Images\Yhills.png"></td></a>
         </tr>
     </table>
 </body>
